--- a/styles/Style.css
+++ b/styles/Style.css
@@ -453,11 +453,10 @@ footer h4 {
     nav {
         width: 85%;
         grid-template-areas: 
-            "logo"
-            "menu"
-            "titulo"
-            "text"
-            "boton";
+            "logo menu"
+            "titulo titulo"
+            "text text"
+            "boton boton";
     }
     nav h1 {
         font-size: 28px;
@@ -586,6 +585,7 @@ footer h4 {
 @media (max-width:480px){
     nav {
         padding: 20px 0; 
+        margin: 0 5%;
         text-align: center;
         grid-template-areas: 
             "logo"
